Enhance Trip entity with planning and metrics fields 0843
Added new fields for trip planning and operational metrics.